# 2D-Entity-Management-System-Based-on-ECS-Architecture

./: CMakeLists.txt  README.md
include/ecs/: CollisionComponent.h  CollisionSystem.h  Component.h  Entity.h  EntityManager.h  System.h
include/renderer/: SDLRenderer.h
src/: main.cpp
src/ecs/: CollisionSystem.cpp  Component.cpp  System.cpp
src/renderer/: SDLRenderer.cpp
